<resources>

    <string name="app_name">AppTaxi</string>
    <string name="title_activity_main">Taxi Caller (Modo Taxista)</string>
    <string name="txtBtnConfig">Configurações</string>
    <string name="txtStatus">STATUS</string>
    <string name="strConfigTitle">CONFIGURAÇÕES</string>
    <string name="strConfigNome">Nome do motorista:</string>
    <string name="strConfigPlaca">Placa do veículo:</string>
    <string name="strConfigSalvar">SALVAR</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_config">Taxi Caller (Modo Taxista)</string>
    <string name="urlWSmostrarCoord">http://192.168.1.101:8090/jersey/teste/mostrarCoord</string>
    <string name="urlWSremoverTaxi">http://192.168.1.101:8090/jersey/teste/removerTaxi</string>
    <string name="urlWSenviarConfirmPedido">http://192.168.1.101:8090/jersey/teste/aceitarPedido</string>
    <string name="urlWSenviarRecusaPedido">http://192.168.1.101:8090/jersey/teste/recusarPedido</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pedido">PedidoActivity</string>
    <string name="strPedidoTitulo">NOVO PEDIDO</string>
    <string name="strPedidoEnd">Endereço</string>
    <string name="strPedidoRef">Referência</string>
    <string name="strPedidoAceitar">ACEITAR</string>
    <string name="strPedidoRecusar">RECUSAR</string>

</resources>